# lua-perf

./: .gitignore  Cargo.toml  LICENSE  README.en.md  README.md  build.rs
.github/workflows/: rust.yml
examples/: perf.folded
src/: args.rs  main.rs  perf.rs
src/bpf/: hash.h  lstate.h  lua.h  lua54.h  lua_5_3_6.h  lua_5_4_0.h  lua_5_5_0.h  profile.bpf.c  profile.h
src/perf/: dwarf.rs  eh.rs  maps.rs  syscall.rs  var.rs  version.rs
